# lm-electrostatics

./: .gitignore  LICENSE  README.md  conservative_vs_rotational.md  gpt2_equations.html  gpt2_equations.md  pyproject.toml  run_analysis.py  run_batch_analysis.sh  run_composed_jacobian_analysis.py  test_all_architectures.py  validate_conservativeness.py
docs/plans/: 2026-03-04-electrostatics-design.md  2026-03-04-electrostatics-plan.md
src/lm_electrostatics/: divergence.py  divergence_attention.py  equations.py  main.py
tests/: test_divergence.py  test_equations.py  test_perplexity.py
